--- a/RMIChatS/RMIChatSServer/pom.xml
+++ b/RMIChatS/RMIChatSServer/pom.xml
@@ -19,4 +19,31 @@
   <maven.compiler.release>17</maven.compiler.release>
   <exec.mainClass>br.rfdouro.rmichatsserver.RMIChatSServer</exec.mainClass>
  </properties>
+ <build>
+  <plugins>   
+   <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <configuration>
+     <archive>
+      <manifest>
+       <addClasspath>true</addClasspath>
+       <mainClass>br.rfdouro.rmichatsserver.RMIChatSServer</mainClass>
+      </manifest>
+     </archive>
+     <descriptorRefs>
+      <descriptorRef>jar-with-dependencies</descriptorRef>
+     </descriptorRefs>
+    </configuration>
+    <executions>
+     <execution>
+      <id>make-assembly</id>
+      <phase>package</phase>
+      <goals>
+       <goal>single</goal>
+      </goals>
+     </execution>
+    </executions>
+   </plugin>
+  </plugins>
+ </build> 
 </project>
